# calendar-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
calendar_agent/: __init__.py  calendar_server.py  calendar_utils.py  exceptions.py  llm_service.py  proxy_client.py
docs/: api-proxy-openapi-doc.json
tests/: __init__.py  conftest.py  run_mutations.py  test_calendar_server.py  test_calendar_utils.py  test_llm_service.py  test_readme_documentation.py
